cka/week-0/services/headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-svc
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - port: 5432
